demos/fortiadc-slb-employdb-ansible/files/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: XXX
  namespace: employeedb
  labels:
    app: XXX
spec:
  replicas: 1
  selector:
    matchLabels:
      app: XXX
  template:
    metadata:
      labels:
        app: XXX
    spec:
      containers:
        - name: employee-demo
          image: XXXDOCKERXXX
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "4Gi"
              cpu: "1"
            requests:
              memory: "1Gi"
              cpu: "300m"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
