demos/fortiadc-slb-employdb-ansible/files/http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  namespace: NAMESPACE
  annotations:
    kubernetes.io/ingress.class: contour
  labels:
    app: breathtestshiny
spec:
  rules:
  - host: breathtestshiny.DNS_DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: breathtestshiny
            port:
              number: 3838
